<resources>
    <string name="app_name" translatable="false">DHT ERP System</string>
    <string name="token_auth" translatable="false">Bearer %1$s</string>

    <string name="try_again">Silahkan coba lagi</string>
    <string name="btn_back">tombol kembali</string>

    <string name="error_logger" translatable="false">Error Logger</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
    <string name="login_title">Masuk ke akun kamu</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="btn_login">Masuk</string>
    <string name="email_cant_empty">Email tidak boleh kosong</string>
    <string name="email_format_error">Format email salah</string>
    <string name="password_cant_empty">Kata sandi tidak boleh kosong</string>
    <string name="tombol_menu">tombol menu</string>
    <string name="greetings" translatable="false">%1$s, \n%2$s</string>
    <string name="greeting_morning">Selamat Pagi</string>
    <string name="greeting_afternoonA">Selamat Siang</string>
    <string name="greeting_afternoonB">Selamat Sore</string>
    <string name="greeting_evening">Selamat Malam</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="logout">Keluar</string>
    <string name="logout_success">Berhasil Logout</string>
    <string name="setting">Pengaturan</string>
    <string name="login_webapp">Masuk Web App</string>
    <string name="qrcode_not_match">QR Code tidak cocok</string>
    <string name="open_source" translatable="false">Open Source</string>
    <string name="menu_not_avail">Menu belum tersedia</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="confirm_logout">Apakah Anda yakin ingin keluar?</string>
    <string name="icon_empty">ikon data kosong</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="button_dropdown">tombol dropdown</string>
    <string name="admin_name_level" translatable="false">%1$s \n%2$s</string>
    <string name="icon_admin_edit">ikon tombol edit admin</string>
    <string name="admin_edit">Edit Profil</string>
    <string name="icon_admin_change_pass">ikon tombol ganti kata sandi</string>
    <string name="admin_change_pass">Ganti Kata Sandi</string>
    <string name="icon_admin_reset_login">ikon tombol reset login</string>
    <string name="admin_reset_login">Reset Login</string>
    <string name="icon_admin_delete">ikon tombol hapus admin</string>
    <string name="admin_delete">Hapus Profil</string>
    <string name="password_again">Masukkan Kata Sandi Lagi</string>
    <string name="btn_save">Simpan</string>
    <string name="pass_not_validated_desc">Kata sandi harus minimal 8 karakter, dan harus menyertakan setidaknya satu huruf besar, satu huruf kecil, satu digit angka, dan tidak boleh ada spasi.</string>
    <string name="pass_not_match">Kata sandi tidak sama</string>
    <string name="change_pass_name">Nama Admin : %1$s</string>
    <string name="change_photo">Ubah foto</string>
    <string name="choose_level">Pilih Level</string>
    <string name="choose_department">Pilih Departemen</string>
    <string name="admin_name">Nama</string>
    <string name="admin_address">Alamat</string>
    <string name="admin_phone">Nomor Telp.</string>
    <string name="success_update_profile">Berhasil melakukan update profil</string>
    <string name="level_cant_empty">Level tidak boleh kosong</string>
    <string name="department_cant_empty">Departemen tidak boleh kosong</string>
    <string name="name_cant_empty">Nama tidak boleh kosong</string>
    <string name="address_cant_empty">Alamat tidak boleh kosong</string>
    <string name="phone_cant_empty">Nomor telp tidak boleh kosong</string>
    <string name="admin_email">Email</string>
    <string name="confirm_reset_login_title">Konfirmasi Reset Login</string>
    <string name="confirm_reset_login_desc">Apakah Anda yakin ingin mereset login pengguna %1$s?</string>
    <string name="confirm_delete_title">Konfirmasi Hapus Pengguna</string>
    <string name="confirm_delete_desc">Apakah Anda yakin ingin menghapus pengguna %1$s?</string>
    <string name="password_change_success">Kata sandi berhasil diubah</string>
    <string name="login_reset_success">Login berhasil di reset</string>
    <string name="delete_user_success">Pengguna berhasil dihapus</string>
    <string name="please_wait">Mohon tunggu</string>
    <string name="login_webapp_success">Login berhasil</string>
    <string name="disabled" translatable="false">disabled</string>
    <string name="level" translatable="false">Level</string>
    <string name="add_new_level">Tambah level baru</string>
    <string name="icon_edit_level_name">ikon tombol edit nama level</string>
    <string name="level_name_edit">Edit Nama Level</string>
    <string name="icon_level_edit_access">ikon tombol edit hak akses</string>
    <string name="level_edit_access">Edit Hak Akses</string>
    <string name="icon_level_delete">ikon tombol hapus level</string>
    <string name="level_delete">Hapus Level</string>
    <string name="level_name">Nama Level</string>
    <string name="confirm_delete_level_title">Konfirmasi Hapus Level</string>
    <string name="confirm_delete_level_desc">Apakah Anda yakin ingin menghapus level %1$s</string>
    <string name="level_show_access">Lihat Hak Akses</string>
    <string name="customer">Pelanggan</string>
    <string name="view_access_level">Hak Akses Level %1$s</string>
    <string name="view_access_modul">Modul</string>
    <string name="view_access_read">Read</string>
    <string name="view_access_insert">Insert</string>
    <string name="view_access_update">Update</string>
    <string name="view_access_delete">Delete</string>
    <string name="issread">issread</string>
    <string name="isinsert">isinsert</string>
    <string name="isupdate">isupdate</string>
    <string name="isdelete">isdelete</string>
    <string name="admin_department">Departemen : %1$s</string>
    <string name="customer_additional_holder" translatable="false">- %1$s : %2$s</string>
    <string name="additional_information">Informasi Tambahan</string>
    <string name="customer_address">Alamat : %1$s</string>
    <string name="customer_phone">Telp : %1$s</string>
    <string name="supplier_type">Jenis : %1$s</string>
    <string name="supplier">Pemasok</string>
    <string name="product_name_category" translatable="false">%1$s (%2$s)</string>
    <string name="product">Produk</string>
    <string name="product_price" translatable="false">Rp %1$s</string>
    <string name="product_specification">Spesifikasi produk</string>
    <string name="specification_name">Nama</string>
    <string name="specification_value">Nilai</string>
    <string name="product_composition">Komposisi Produk</string>
    <string name="product_goods">Barang</string>
    <string name="product_requirement">Kebutuhan</string>
    <string name="shipment">Pengiriman</string>
    <string name="goods">Barang</string>
    <string name="inquiries_nama_kode_process" translatable="false">%1$s (%2$s : %3$s)</string>
    <string name="inquiries_process">Proses Inquiries</string>
    <string name="inquiries_name_phone" translatable="false">%1$s (%2$s)</string>
    <string name="inquiries_createddate" translatable="false">created : %1$s</string>
    <string name="inquiries_lastupdate" translatable="false">updated : %1$s</string>
    <string name="ikon_tombol_detail">ikon tombol detail</string>
    <string name="inquiries_detail" translatable="false">Detail</string>
    <string name="inquiries_sales_contract" translatable="false">Sales Contract</string>
    <string name="inquiries_work_order" translatable="false">Work Order</string>
    <string name="inquiries_status" translatable="false">Status : %1$s</string>
    <string name="inquiries_status_drafted" translatable="false">Drafted</string>
    <string name="inquiries_status_waiting_approval" translatable="false">Waiting approval</string>
    <string name="inquiries_status_waiting_approval_customer" translatable="false">Waiting approval customer</string>
    <string name="inquiries">Inquiries</string>
    <string name="inquiries_payment">Pembayaran : %1$s</string>
    <string name="shipment_sent_date">Dikirim Tanggal</string>
    <string name="shipment_estimated_date">Perkiraan Sampai</string>
    <string name="inquiries_detail_title" translatable="false">Detail Inquiries %1$s</string>
    <string name="inquiries_product_total" translatable="false">Total : Rp %1$s</string>
    <string name="inquiries_product_price">Harga : Rp %1$s</string>
    <string name="inquiries_product_qty" translatable="false">Qty : %1$s</string>
    <string name="inquiries_product_subtotal" translatable="false">Subtotal : Rp %1$s</string>
    <string name="inquiries_product_packing" translatable="false">Packing : %1$s</string>
    <string name="sc_wo_inquiries_code">Kode</string>
    <string name="sc_wo_created_date">Tanggal Dibuat</string>
    <string name="sc_wo_customer">Pelanggan</string>
    <string name="tv_sc_net_gross">Netto : %1$s | Bruto : %2$s</string>
    <string name="inquiries_status_rejected" translatable="false">Rejected, please fix it on Inquiries</string>
    <string name="inquiries_status_process">Proses</string>
    <string name="packing_must_print">Harus dicetak</string>
    <string name="packing_scanned">Ter-scan</string>
    <string name="packing_already_print">Sudah dicetak</string>
    <string name="packing_load_container">Masuk kontainer</string>
    <string name="packing">Packing</string>
    <string name="department">Departemen</string>
    <string name="work_order_breakdown" translatable="false">Breakdown</string>
    <string name="goods_needs_each">Kebutuhan setiap produk: %1$s</string>
    <string name="packing_load">Muat: %1$s</string>
    <string name="breakdown_work_order">Breakdown Work Order</string>
    <string name="breakdown_total" translatable="false">Total: %1$s</string>
    <string name="app_logo">app logo</string>
    <string name="purchasing_estimated_delivery">Perkiraan pengiriman : %1$s</string>
    <string name="design_packing_composition">Komposisi</string>
    <string name="design_packing_used_for">Digunakan untuk produk</string>
    <string name="need_goods">Butuh barang</string>
    <string name="needs">Kebutuhan</string>
    <string name="design_packing">Design Packing</string>
    <string name="load">Muatan</string>

</resources>