<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_ethernet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/md_grey_100"
    app:cardCornerRadius="8dp"
    app:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="6">

        <TextView
            android:id="@+id/tv_modul_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/read_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/issread"
            android:src="@drawable/ic_checked"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/insert_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/isinsert"
            android:src="@drawable/ic_checked"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/update_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/isupdate"
            android:src="@drawable/ic_checked"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/delete_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/isdelete"
            android:src="@drawable/ic_checked"
            android:visibility="invisible" />

    </LinearLayout>


</androidx.cardview.widget.CardView>